--- a/index.html
+++ b/index.html
@@ -1,124 +1,98 @@
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mis Cursos - Universidad de Lima</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Login - Universidad de Lima</title>
   <style>
     :root {
-      --accent: #F36D21;
-      --bg: #f9f9f9;
-      --text: #333;
-      --border: #ddd;
+      --color-primario: #f36d21;
+      --color-texto: #222;
+      --color-fondo: #f6f6f6;
     }
+
     body {
       font-family: 'Segoe UI', sans-serif;
-      background-color: var(--bg);
-      color: var(--text);
-      margin: 0;
-      padding: 0;
-    }
-    header {
-      background-color: var(--accent);
-      color: white;
-      text-align: center;
-      padding: 15px 0;
+      background-color: var(--color-fondo);
       display: flex;
+      flex-direction: column;
       align-items: center;
       justify-content: center;
-      gap: 10px;
-    }
-    header img {
-      width: 50px;
-    }
-    h1 {
+      height: 100vh;
       margin: 0;
-      font-size: 22px;
     }
-    main {
-      max-width: 800px;
-      margin: 40px auto;
+
+    img {
+      width: 100px;
+      margin-bottom: 20px;
+    }
+
+    h1 {
+      color: var(--color-primario);
+      margin-bottom: 10px;
+    }
+
+    form {
       background: white;
-      border-radius: 12px;
       padding: 30px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-    }
-    h2 {
-      color: var(--accent);
-      margin-top: 25px;
-      border-bottom: 2px solid var(--accent);
-      padding-bottom: 5px;
-    }
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-top: 10px;
-    }
-    th, td {
-      border: 1px solid var(--border);
-      padding: 10px;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      width: 280px;
       text-align: center;
     }
-    th {
-      background-color: #ffe6d3;
+
+    input {
+      display: block;
+      width: 100%;
+      padding: 10px;
+      margin: 10px 0;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+    }
+
+    button {
+      background-color: var(--color-primario);
+      color: white;
+      border: none;
+      padding: 10px;
+      border-radius: 6px;
+      width: 100%;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background-color: #d85f1d;
+    }
+
+    p.error {
+      color: red;
+      font-size: 14px;
+      display: none;
     }
   </style>
 </head>
 <body>
-  <header>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/e/e2/Universidad_de_Lima_logo.svg" alt="Escudo">
-    <h1>Mis Cursos - Universidad de Lima</h1>
-  </header>
+  <img src="https://upload.wikimedia.org/wikipedia/commons/7/7e/Escudo_de_la_Universidad_de_Lima.svg" alt="Escudo Universidad de Lima">
+  <h1>Acceso Universidad de Lima</h1>
+  <form id="loginForm">
+    <input type="text" id="usuario" placeholder="Usuario" required />
+    <input type="password" id="contraseña" placeholder="Contraseña" required />
+    <p class="error" id="mensajeError">Usuario o contraseña incorrectos</p>
+    <button type="submit">Ingresar</button>
+  </form>
 
-  <main>
-    <h2>MATEM.GEST.NEGOCIOS / 306</h2>
-    <table>
-      <tr><th>Evaluación</th><th>Nota</th></tr>
-      <tr><td>Examen escrito 1</td><td>11</td></tr>
-      <tr><td>Examen escrito 2</td><td>14</td></tr>
-      <tr><td>Examen escrito 3</td><td>-</td></tr>
-      <tr><td>Examen escrito 4</td><td>-</td></tr>
-      <tr><td>Ejercicio colaborativo</td><td>15</td></tr>
-    </table>
+  <script>
+    document.getElementById('loginForm').addEventListener('submit', function(e) {
+      e.preventDefault();
+      const usuario = document.getElementById('usuario').value.trim();
+      const contraseña = document.getElementById('contraseña').value.trim();
 
-    <h2>HERR. INF. GEST. II / 401</h2>
-    <table>
-      <tr><th>Evaluación</th><th>Nota</th></tr>
-      <tr><td>Examen escrito FFINA</td><td>11</td></tr>
-      <tr><td>Examen escrito VBA</td><td>13</td></tr>
-      <tr><td>Trabajo de investigación</td><td>-</td></tr>
-      <tr><td>Examen escrito SQL</td><td>-</td></tr>
-      <tr><td>Examen escrito PYTHON</td><td>-</td></tr>
-    </table>
-
-    <h2>FUND. ADMINISTRACIÓN / 303</h2>
-    <table>
-      <tr><th>Evaluación</th><th>Nota</th></tr>
-      <tr><td>EVC</td><td>-</td></tr>
-      <tr><td>Control Lectura</td><td>14</td></tr>
-      <tr><td>Examen escrito EE</td><td>13</td></tr>
-      <tr><td>Participación PAR</td><td>-</td></tr>
-      <tr><td>Informe IN</td><td>-</td></tr>
-    </table>
-
-    <h2>ESTA.BÁS.NEGOC. / 2045</h2>
-    <table>
-      <tr><th>Evaluación</th><th>Nota</th></tr>
-      <tr><td>Examen escrito 1</td><td>10</td></tr>
-      <tr><td>Examen escrito 2</td><td>13</td></tr>
-      <tr><td>Ejercicio colaborativo</td><td>15</td></tr>
-      <tr><td>Trabajo de investigación</td><td>-</td></tr>
-      <tr><td>Examen escrito 3</td><td>-</td></tr>
-    </table>
-
-    <h2>CONTA. GENERAL / 342</h2>
-    <table>
-      <tr><th>Evaluación</th><th>Nota</th></tr>
-      <tr><td>Examen escrito 1</td><td>08</td></tr>
-      <tr><td>Trabajo de investigación 1</td><td>14</td></tr>
-      <tr><td>Examen escrito 2</td><td>14</td></tr>
-      <tr><td>Trabajo de producción 1</td><td>-</td></tr>
-      <tr><td>Examen escrito 3</td><td>-</td></tr>
-    </table>
-  </main>
+      if (usuario === '20210124' && contraseña === 'sergio1234') {
+        // Redirigir correctamente dentro de GitHub Pages
+        window.location.href = window.location.origin + window.location.pathname.replace('index.html', '') + 'cursos.html';
+      } else {
+        document.getElementById('mensajeError').style.display = 'block';
+      }
+    });
+  </script>
 </body>
 </html>
